--- a/Synchronized.WebApp/Pages/Questions/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Index.cshtml
@@ -83,7 +83,7 @@
                             <div class="views">@item.QuestionViews.Count</div><i class="fa fa-eye" aria-hidden="true"></i>
                         </div>
                         <div class="points col-md-1">
-                            <div class="synched-points">@item.Points</div><i class="fa fa-star-o" aria-hidden="true"></i>
+                            <div class="synched-points">@item.Votes.Count</div><i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
                     </div>
                 </article>
