--- a/Synchronized.WebApp/Pages/_Layout.cshtml
+++ b/Synchronized.WebApp/Pages/_Layout.cshtml
@@ -52,6 +52,33 @@
         </div>
     </div> 
 
+    <environment include="Development">
+        <script src="~/node_modules/jquery/dist/jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+        <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
+        <script src="~/js/synchedLib.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                asp-fallback-src="~/node_modules/jquery/dist/jquery.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+                asp-fallback-src="~/node_modules/bootstrap/dist/js/bootstrap.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"
+                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+        </script>
+        <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
+        <script src="~/js/synchedLib.js"></script>
+    </environment>
+
+    @RenderSection("Scripts", required: false)
+
     <section id="cast-page-contant">
         <div class="container">
             @RenderBody()
@@ -63,30 +90,6 @@
             <p>&copy; 2018 - @ViewData["Title"]</p>
         </footer>
     </div>
-    
-    <environment include="Development">
-        <script src="~/node_modules/jquery/dist/jquery.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-        <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>        
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-                asp-fallback-src="~/node_modules/jquery/dist/jquery.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-            asp-fallback-src="~/node_modules/bootstrap/dist/js/bootstrap.js"
-            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-            crossorigin="anonymous"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/lib/jQuery-Tags-Input-1.3.6/dist/jquery.tagsinput.min.js"></script>
-    </environment>
-
-    @RenderSection("Scripts", required: false)
+   
 </body>
 </html>
