--- a/Synchronized.WebApp/Pages/Questions/Index.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Index.cshtml
@@ -32,31 +32,16 @@
                             </div>
                             <div class="question-content">
                                 @Html.Raw(item.Body)
-                                @if (item.QuestionTags.Count > 0)
+                                @if (item.Tags.Count() > 0)
                                 {
                                     <div>
                                         @{
-                                            var first = true;
-                                            var tagNames = "";
                                             var name = "tags-" + counter;
                                             counter++;
-                                            foreach (var questionTag in item.QuestionTags)
-                                            {
-                                                if (!first)
-                                                {
-                                                    tagNames += "," + questionTag.Tag.Name;
-                                                }
-                                                else
-                                                {
-                                                    tagNames += questionTag.Tag.Name;
-                                                    first = false;
-                                                }
-                                            }
-                                            first = true;
                                         }
-                                        <input class="synched-tags" name=@name id=@name value=@tagNames />
+                                        <input class="synched-tags" name=@name id=@name value=@item.Tags />
                                         <div class="synched-publisher">
-                                            <a href="/Users/Details/@item.PublisherId">@item.Publisher.UserName</a>
+                                            <a href="/Users/Details/@item.Publisher.">@item.Publisher.Name</a>
                                         </div>
                                     </div>
                                  }
@@ -69,7 +54,7 @@
                             </div>
                         </div>
                         <div class="col-md-1">
-                            @if (item.Answered())
+                            @if (item.IsAnswered)
                             {
                                 <div class="synched-answers answered">@item.Answers.Count</div>
                             }
@@ -80,10 +65,10 @@
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         </div>
                         <div class="synched-views col-md-1">
-                            <div class="views">@item.QuestionViews.Count</div><i class="fa fa-eye" aria-hidden="true"></i>
+                            <div class="views">@item.Views</div><i class="fa fa-eye" aria-hidden="true"></i>
                         </div>
                         <div class="points col-md-1">
-                            <div class="synched-points">@item.Votes.Count</div><i class="fa fa-star-o" aria-hidden="true"></i>
+                            <div class="synched-points">@item.Views</div><i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
                     </div>
                 </article>
