--- a/Synchronized.WebApp/Pages/Questions/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Details.cshtml
@@ -74,7 +74,7 @@
                 <div class="app-stats col-md-1">
                     <div class="answer-number">@counter.</div>
                     @{ counter++; }
-                    <div class="synched-points">@answer.Points</div>
+                    <div class="synched-points">@answer.SumVotes</div>
                     <button class="synched-vote-btn vote-up-btn"><i class="fa fa-plus-square"></i></button>
                     <button class="synched-vote-btn vote-down-btn"><i class="fa fa-minus-square"></i></button>
                 </div>
