--- a/Synchronized.WebApp/Pages/Questions/Ask.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Ask.cshtml
@@ -18,7 +18,7 @@
                     <textarea asp-for="Question.Body"></textarea>
                 </div>
                 <div class="form-group">
-                    <input asp-for="TagNames" type="text" class="form-control">
+                    <input asp-for="Question.Tags" type="text" class="form-control question-tags">
                 </div>
                 <button type="submit" class="btn btn-secondary">Submit</button>
             </form>
