--- a/Synchronized.WebApp/Pages/Questions/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Details.cshtml
@@ -43,6 +43,10 @@
                             <div>@comment.Body</div>
                             <button type="button" class="btn btn-link synched-edit">Edit</button>
                             <button type="button" class="btn btn-link synched-delete">Delete</button>
+                            <div class="synched-meta">
+                                @comment.PublisherName
+                                @comment.DatePosted
+                            </div>
                         </div>
                     }
                 </div>                
@@ -98,6 +102,10 @@
                                     <div>@comment.Body</div>
                                     <button type="button" class="btn btn-link synched-edit">Edit</button>
                                     <button type="button" class="btn btn-link synched-delete">Delete</button>
+                                    <div class="synched-meta">
+                                        @comment.PublisherName
+                                        @comment.DatePosted
+                                    </div>
                                 </div>
                             }
                         </div>
