Enabling addition of tags

--- a/Synchronized.WebApp/Pages/Questions/Details.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Details.cshtml
@@ -147,5 +147,6 @@
 
 @section Scripts {
     <script src="~/lib/jQuery-TE_v.1.4.0/uncompressed/jquery-te-1.4.0.js"></script>
+    <script src="~/lib/jquery-dateFormat-1.0.2/date-format.js"></script>
     <script src="~/js/details.js"></script>
 }
