--- a/Synchronized.WebApp/Pages/Questions/Edit.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Edit.cshtml
@@ -19,7 +19,7 @@
                     <textarea asp-for="Question.Body"></textarea>
                 </div>
                 <div class="form-group">
-                    <input asp-for="TagNames" type="text" class="form-control">
+                    <input asp-for="Question.QuestionTags" type="text" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-secondary">Submit</button>
             </form>
