Questions now have edit view.

--- a/Synchronized.WebApp/Pages/Questions/Ask.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Ask.cshtml
@@ -9,7 +9,7 @@
         <section>
             <div asp-validation-summary="All"></div>
             <form method="POST" id="synched-ask">
-                <h4>Ask your question.</h4>
+                <h4>Ask your question</h4>
                 <hr />
                 <div class="form-group">
                     <input asp-for="Question.Title" type="text" class="form-control" aria-describedby="questionTitle" placeholder="Title">
