--- a/Synchronized.WebApp/Pages/Questions/Ask.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Ask.cshtml
@@ -4,6 +4,27 @@
     ViewData["Title"] = "Ask";
 }
 
+@*@if (SignInManager.IsSignedIn(User))
+{
+    <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a asp-page="/Account/Manage/Index" title="Manage" class="nav-link">@UserManager.GetUserName(User)</a>
+            </li>
+            <li class="nav-item">
+                <button type="submit" class="btn btn-link navbar-btn nav-link">Log out</button>
+            </li>
+        </ul>
+    </form>
+}
+else
+{
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a asp-page="/Account/Register" class="nav-link">Register</a></li>
+        <li class="nav-item"><a asp-page="/Account/Login" class="nav-link">Log in</a></li>
+    </ul>
+}*@
+
 <div class="row">
     <div class="offset-md-2 col-md-8">
         <section>
