--- a/Synchronized.WebApp/Pages/Questions/Edit.cshtml
+++ b/Synchronized.WebApp/Pages/Questions/Edit.cshtml
@@ -8,7 +8,7 @@
     <div class="offset-md-2 col-md-8">
         <section>
             <div asp-validation-summary="All"></div>
-            <form method="POST" id="synched-ask">
+            <form method="POST" id="synched-edit" asp-route-postId="@Model.Post.Id">
                 <h4>Edit</h4>
                 <hr />
                 @if (!String.IsNullOrWhiteSpace(Model.Post.Title)) { 
